# seleknyyy-store

./: .env.example  .env.production  README.md  admin.html  deepseek_html_20260331_c3753b.html  index.html  package-lock.json
backend/: .gitignore  README.md  pyproject.toml
backend/app/: config.py  database.py  deps.py  errors.py  main.py  models.py  security.py
backend/app/migrations/: __init__.py  sqlite_to_postgres.py
backend/app/routers/: agents.py  auth.py  callcenter.py  carriers.py  cod.py  commissions.py  customers.py  dashboard.py  fraud.py  notifications.py  orders.py  products.py  returns.py  settings.py  shipments.py  stores.py  subscriptions.py  team.py  warehouses.py  webhooks.py
src/: App.tsx  index.css
src/components/: ConfirmDialog.tsx  Logo.tsx  Navbar.tsx  OrderTimelineModal.tsx  PlatformLogo.tsx  Toast.tsx  TrialCountdown.tsx  TrialExpiredWall.tsx  WhatsAppButton.tsx
src/components/ui/: Badge.tsx  Dropdown.tsx  Modal.tsx  ScrollToTop.tsx  Toggle.tsx  Tooltip.tsx
src/context/: AppContext.tsx
src/lib/: api.ts  errorsI18n.ts  fingerprint.ts  i18n.ts  session.ts  theme.ts  utils.ts
src/pages/: Admin.tsx  Dashboard.tsx  Demo.tsx  Landing.tsx  LegalPages.tsx  Login.tsx  Signup.tsx
src/pages/tabs/: OctomaticTabs.tsx
src/styles/: auth.css
